vercel.json updated

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "client/build" } },
-      { "src": "server/package.json", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "server/server.js" },
-      { "src": "/(.*)", "dest": "client/package.json" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } },
+    { "src": "server/package.json", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "server/server.js" },
+    { "src": "/(.*)", "dest": "/client/$1" }
+  ]
+}
