--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } },
-    { "src": "server/package.json", "use": "@vercel/node" }
+    { "src": "server/server.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/server.js" },
-    { "src": "/(.*)", "dest": "client/vercel.server.js" }
+    { "src": ".*", "dest": "/client/index.html" }
   ]
 }
